# Hoshi-Reader-Windows

./: .gitignore  .gitmodules  AGENTS.md  README.md  STATUS.md  _writer.py  install_context_menu.ps1  package-lock.json  package.json  requirements.txt  uninstall_context_menu.ps1  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: rust.yml
docs/: ANKI_AUDIO_SYNC_PLAN.md  ANKI_HSA_WINDOWS_ALIGNMENT.md  ANKI_MEDIA_EXPORT_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING.md  DICTIONARY_POPUP_DESKTOP_ALIGNMENT_PLAN.md  DICTIONARY_POPUP_HSA_ALIGNMENT.md  DICTIONARY_SETTINGS_HSA_ALIGNMENT_PLAN.md  LOOKUP_PERFORMANCE_BASELINE.md  LOOKUP_ROADMAP.md  LOOKUP_SHIFT_HOVER_REFERENCE.md  PROJECT_STATUS.md  READER_ENTRY_CHARACTERIZATION.md  README.md  REAL_LOOKUP_VALIDATION_PLAN.md  TODO.md  VALIDATION.md  YOMITAN_REFERENCE_AUDIT.md
hoshi-reader-windows/: .gitignore  AGENTS.md  STATUS.md  index.html  package-lock.json  package.json  vite.config.ts
hoshi-reader-windows/docs/: LOOKUP_ROADMAP.md  PROJECT_STATUS.md  READER_ENTRY_CHARACTERIZATION.md  README.md  REAL_LOOKUP_VALIDATION_PLAN.md  TODO.md  reader-layout-baseline.md
reference/: README.md
scripts/: anki-connect-check.mjs  bookshelf-check.mjs  dictionary-management-check.mjs  dictionary-search-check.mjs  global-lookup-settings-check.mjs  keyboard-shortcuts-unit-check.mjs  lookup-performance-check.mjs  lookup-popup-check.mjs  package-portable.ps1  reader-toc-check.mjs  reader-visual-check.mjs  reading-statistics-check.mjs  sasayaki-playback-check.mjs  settings-state-check.mjs  vs-x64-cargo.cmd
search_keywords/: __init__.py  engine.py  gui.py  main.py
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anki.rs  audio_clip.rs  global_lookup.rs  lib.rs  library.rs  local_audio.rs  sasayaki.rs  storage.rs
src-tauri/src/dict/: commands.rs  ffi.rs
src-tauri/src/epub/: book.rs  sanitizer.rs
(+91 files in other folders)
