[package]
name = "hoshi-reader-windows"
version = "0.1.0"
description = "Hoshi Reader Windows - EPUB reader with dictionary lookup"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2"
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
base64 = "0.22"
encoding_rs = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
regex = "1.12"
log = "0.4"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
rbook = { version = "0.7", default-features = false, features = ["threadsafe"] }
zip = "0.6"
tauri-plugin-dialog = "2"
